--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-596.8KB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.38MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-3.11MB/s(Youtube:不良林), server: jp2.autlinzh.xyz, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp2.autlinzh.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇫🇷 法国-1.64MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 134.195.196.149, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2, server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1015.9KB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇩🇪 德国-1.46MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-910.2KB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇩🇪 德国-1.29MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 134.195.196.149, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇨🇦 加拿大-2.16MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-2.10MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
