--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇦 加拿大-909.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.15MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-992.2KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.15MB/s(Youtube:不良林), server: 116.129.254.192, port: 16106, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1015.9KB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇩🇪 德国-1.46MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-910.2KB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇩🇪 德国-1.29MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 134.195.196.149, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-2.16MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-2.10MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-2.10MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-2.10MB/s(Youtube:不良林) 2, server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-910.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
