--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-909.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.15MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-992.2KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.15MB/s(Youtube:不良林), server: 116.129.254.192, port: 16106, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1015.9KB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1.57MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 172.99.188.71, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 (已存活1天)加拿大-2.78MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 172.99.188.71, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 134.195.196.149, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-909.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1015.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
