--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-1.55MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: 172.99.188.71, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-2.04MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 172.99.188.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-966.1KB/s(Youtube:不良林), server: 116.129.254.192, port: 16264, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: 140.83.57.80, port: 49840, type: vmess, uuid: 2969ad1b-9787-4927-94e6-22f597618de0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.94MB/s(Youtube:不良林), server: 120.241.236.215, port: 16213, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.47MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-277.0KB/s(Youtube:不良林), server: 120.241.236.215, port: 16111, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.82MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 134.195.196.149, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-2.31MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-2.50MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-1.16MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
